--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,7 +9,10 @@
     {% block styles %}{% endblock %}
 </head>
 <body>
+{% include 'navbar/navbar.html' %}
+
 {% block content %}{% endblock %}
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
