--- a/src/apps/auth/templates/login.html
+++ b/src/apps/auth/templates/login.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
-{#{% load crispy_forms_filters %}#}
+{% load crispy_forms_filters %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
     <form method="post">
-        {#        {{ form|crispy }}#}
-        {{ form.as_p }}
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 {% endblock %}
