--- a/src/apps/auth/templates/login.html
+++ b/src/apps/auth/templates/login.html
@@ -5,9 +5,16 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+    <div class="container">
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <div class="mb-3 text-danger">
+                {% if error %}
+                    Error: {{ error }}
+                {% endif %}
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
 {% endblock %}
