--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
 
-        {% include 'navbar/navbar-brand.html' %}
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">\
+
+            {% include 'navbar/navbar-brand.html' %}
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
