--- a/src/apps/auth/templates/registration.html
+++ b/src/apps/auth/templates/registration.html
@@ -2,21 +2,20 @@
 
 {% load crispy_forms_filters %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Registration{% endblock %}
 
 {% block content %}
     <div class="container">
-        <div class="fs-1 mb-3">Login</div>
+        <div class="fs-1 mb-3">Registration</div>
         <form method="post">
             {% csrf_token %}
-            {{ form|crispy }}
+            {{ form | crispy }}
             <div class="mb-3 text-danger">
                 {% if error %}
                     Error: {{ error }}
                 {% endif %}
             </div>
-            {{ test }}
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 {% endblock %}
