--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -4,7 +4,7 @@
         Menu
     </button>
     <ul class="dropdown-menu ">
-        <li><a class="dropdown-item" href="#">Edit profile</a></li>
+        <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
         <li>
             <hr class="dropdown-divider">
         </li>
