--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -8,7 +8,7 @@
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">News</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'news_list' %}">News</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
