optimized query for news

--- a/src/apps/news/templates/article.html
+++ b/src/apps/news/templates/article.html
@@ -3,7 +3,7 @@
     <div class="card-body">
         <h5 class="card-title">{{ article.topic }}</h5>
         <p class="card-text">{{ article.text }}</p>
-        <p class="card-text">{{ article.company.name }}</p>
+        <p class="card-text">{{ article.company__name }}</p>
         <p class="card-text"><small class="text-body-secondary">{{ article.created_at }}</small></p>
         <a href="{{ article.link }}" class="btn btn-primary">Read</a>
     </div>
