--- a/src/apps/news/templates/article.html
+++ b/src/apps/news/templates/article.html
@@ -1,5 +1,5 @@
-<div class="card mb-3">
-    <img src="{{ article.image_src }}{{ article.topic }}" class="card-img-top" alt="...">
+<div class="card mt-3">
+    <img src="{{ article.image_src }}{{ article.topic }}" class="card-img-top" alt="{{ article.topic }}">
     <div class="card-body">
         <h5 class="card-title">{{ article.topic }}</h5>
         <p class="card-text">{{ article.text }}</p>
