--- a/src/apps/profile/templates/edit_profile.html
+++ b/src/apps/profile/templates/edit_profile.html
@@ -19,10 +19,15 @@
         </div>
         <form method="post">
             {% csrf_token %}
-            {{ user_form|crispy }}
-            {{ profile_form|crispy }}
-
-            {{ test }}
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        {{ user_form|crispy }}</div>
+                    <div class="col">
+                        {{ profile_form|crispy }}
+                    </div>
+                </div>
+            </div>
             <button type="submit" class="btn btn-primary">Apply changes</button>
         </form>
     </div>
