--- a/src/apps/profile/templates/edit_profile.html
+++ b/src/apps/profile/templates/edit_profile.html
@@ -30,5 +30,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Apply changes</button>
         </form>
+        <hr>
+        {% include 'delete_profile_button_modal.html' %}
     </div>
 {% endblock %}
