--- a/src/apps/user/templates/registration.html
+++ b/src/apps/user/templates/registration.html
@@ -15,7 +15,7 @@
                     Error: {{ error }}
                 {% endif %}
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
 {% endblock %}
