--- a/src/apps/news/templates/news_list.html
+++ b/src/apps/news/templates/news_list.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block title %}DedRobin Game Service{% endblock %}
 
 {% block content %}
     <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4">
             {% for article in news %}
                 {% if article.is_published %}
                     <div class="col">
