--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-
-
+        {% include 'navbar/navbar_parts/navbar-brand.html' %}
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            {% include 'navbar/navbar_parts/navbar-brand.html' %}
-
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'news_list' %}">News</a>
@@ -31,7 +31,7 @@
                 {#                    <a class="nav-link disabled">Disabled</a>#}
                 {#                </li>#}
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex my-2 me-2" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
