--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -1,5 +1,5 @@
 <li class="nav-item dropdown">
-    <button class="btn btn-success dropdown-toggle fs-6 px-5 ms-2" role="button" data-bs-toggle="dropdown"
+    <button class="btn btn-success dropdown-toggle fs-6 px-5" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
         Menu
     </button>
