--- a/src/apps/news/templates/news_list.html
+++ b/src/apps/news/templates/news_list.html
@@ -3,8 +3,9 @@
 {% block title %}DedRobin Game Service{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4">
+    <div class="container p-2">
+        {% include "pagination.html" %}
+        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 pb-2">
             {% for article in news %}
                 {% if article.is_published %}
                     <div class="col">
@@ -13,5 +14,6 @@
                 {% endif %}
             {% endfor %}
         </div>
+        {% include "pagination.html" %}
     </div>
 {% endblock %}
