--- a/src/apps/news/templates/pagination.html
+++ b/src/apps/news/templates/pagination.html
@@ -1,7 +1,7 @@
 {% load pagination_tags %}
 
 <nav aria-label="Page navigation example">
-    Page {{ news.number }} from {{ num_pages|last }}
+    Page {{ news.number }} of {{ news.paginator.num_pages }}
     <ul class="pagination">
         {% if  news.has_previous %}
             <li class="page-item"><a class="page-link"
@@ -9,7 +9,7 @@
         {% else %}
             <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
         {% endif %}
-        {% for num in num_pages %}
+        {% for num in news.paginator.page_range %}
             {% if news.number == num %}
                 <li class="page-item active"><a class="page-link"
                                                 href="{% url 'news_list' %}?page={{ num }}">{{ num }}</a></li>
