--- a/src/apps/news/templates/pagination.html
+++ b/src/apps/news/templates/pagination.html
@@ -4,24 +4,32 @@
     Page {{ news.number }} of {{ news.paginator.num_pages }}
     <ul class="pagination">
         {% if  news.has_previous %}
-            <li class="page-item"><a class="page-link"
-                                     href="{% url_replace page=news.previous_page_number %}">Previous</a></li>
+            <li class="page-item">
+                <a class="page-link" href="{% url_replace page=1 %}">&#171;</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="{% url_replace page=news.previous_page_number %}">&#8249;</a>
+            </li>
         {% else %}
-            <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+            <li class="page-item disabled"><a class="page-link" href="#">&#171;</a></li>
+            <li class="page-item disabled"><a class="page-link" href="#">&#8249;</a></li>
         {% endif %}
-        {% for num in news.paginator.page_range %}
+        {% for num in elements %}
             {% if news.number == num %}
-                <li class="page-item active"><a class="page-link"
-                                                href="{% url 'news_list' %}?page={{ num }}">{{ num }}</a></li>
+                <li class="page-item active">
+                    <a class="page-link" href="{% url 'news_list' %}?page={{ num }}">{{ num }}</a>
+                </li>
             {% else %}
                 <li class="page-item"><a class="page-link" href="{% url 'news_list' %}?page={{ num }}">{{ num }}</a>
                 </li>
             {% endif %}
         {% endfor %}
         {% if  news.has_next %}
-            <li class="page-item"><a class="page-link" href="{% url_replace page=news.next_page_number %}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="{% url_replace page=news.next_page_number %}">&#8250;</a></li>
+            <li class="page-item"><a class="page-link" href="{% url_replace page=news.paginator.num_pages %}">&#187;</a></li>
         {% else %}
-            <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+            <li class="page-item disabled"><a class="page-link" href="#">&#8250;</a></li>
+            <li class="page-item disabled"><a class="page-link" href="#">&#187;</a></li>
         {% endif %}
     </ul>
 </nav>
