--- a/src/apps/news/templates/pagination.html
+++ b/src/apps/news/templates/pagination.html
@@ -1,10 +1,10 @@
 {% load pagination_tags %}
 
-<nav aria-label="Page navigation example">
+<nav aria-label="Page news navigation">
     Page {{ news.number }} of {{ news.paginator.num_pages }}
     <ul class="pagination">
         {% if  news.has_previous %}
-            <li class="page-item">
+            <li class="page-item ">
                 <a class="page-link" href="{% url_replace page=1 %}">&#171;</a>
             </li>
             <li class="page-item">
@@ -14,22 +14,33 @@
             <li class="page-item disabled"><a class="page-link" href="#">&#171;</a></li>
             <li class="page-item disabled"><a class="page-link" href="#">&#8249;</a></li>
         {% endif %}
-        {% for num in elements %}
-            {% if news.number == num %}
+        {% for num_page in displayed_pages %}
+            {% if news.number == num_page %}
                 <li class="page-item active">
-                    <a class="page-link" href="{% url 'news_list' %}?page={{ num }}">{{ num }}</a>
+                    <a class="page-link" href="{% url 'news_list' %}?page={{ num_page }}">{{ num_page }}</a>
                 </li>
             {% else %}
-                <li class="page-item"><a class="page-link" href="{% url 'news_list' %}?page={{ num }}">{{ num }}</a>
+                <li class="page-item"><a class="page-link"
+                                         href="{% url 'news_list' %}?page={{ num_page }}">{{ num_page }}</a>
                 </li>
             {% endif %}
         {% endfor %}
         {% if  news.has_next %}
-            <li class="page-item"><a class="page-link" href="{% url_replace page=news.next_page_number %}">&#8250;</a></li>
-            <li class="page-item"><a class="page-link" href="{% url_replace page=news.paginator.num_pages %}">&#187;</a></li>
+            <li class="page-item"><a class="page-link" href="{% url_replace page=news.next_page_number %}">&#8250;</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="{% url_replace page=news.paginator.num_pages %}">&#187;</a>
+            </li>
         {% else %}
             <li class="page-item disabled"><a class="page-link" href="#">&#8250;</a></li>
             <li class="page-item disabled"><a class="page-link" href="#">&#187;</a></li>
         {% endif %}
+        <li class="page-item">
+            <form method="get" class="input-group mb-3">
+                <input type="number" class="form-control ms-2" placeholder="Page" aria-label="Page"
+                       aria-describedby="button-addon2">
+                <button class="btn btn-outline-primary" type="submit" id="button-addon2">Follow the page</button>
+            </form>
+        </li>
     </ul>
+
 </nav>
