created dirs with static files

--- a/src/apps/news/templates/news_list.html
+++ b/src/apps/news/templates/news_list.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'news/css/news_list.css' %}">
+
+{% endblock %}
+
 {% block title %}DedRobin Game Service{% endblock %}
 
 {% block content %}
