--- a/src/apps/news/templates/article.html
+++ b/src/apps/news/templates/article.html
@@ -1,6 +1,7 @@
 <div class="card mt-3">
-    <div class="card-header">{{ article.company__name }}</div>
     <img src="{{ article.image_src }}" class="card-img-top" alt="{{ article.topic }}">
+    <a class="card-header text-center article__company_url"
+       href="{{ article.company__url }}">{{ article.company__name }}</a>
     <div class="card-body">
         <h5 class="card-title">{{ article.topic }}</h5>
         <p class="card-text">{{ article.text }}</p>
