--- a/src/apps/news/static/news/css/news_list.css
+++ b/src/apps/news/static/news/css/news_list.css
@@ -1,12 +1,7 @@
 .article__company_url {
-    text-decoration: none;
-    transition: 0.2s;
-}
+  text-decoration: none;
+  transition: 0.2s; }
+  .article__company_url:hover {
+    background: #E0E0E0; }
 
-.article__company_url:hover {
-    background: #E0E0E0;
-}
-
-.article__company_url:not:hover {
-    transition: 0.5s;
-}
+/*# sourceMappingURL=news_list.css.map */
