--- a/src/apps/news/templates/pagination.html
+++ b/src/apps/news/templates/pagination.html
@@ -1,7 +1,6 @@
 {% load pagination_tags %}
 
-<nav aria-label="Page news navigation">
-    Page {{ news.number }} of {{ news.paginator.num_pages }}
+<nav aria-label="Page news navigation" class="d-flex justify-content-between">
     <ul class="pagination">
         {% if  news.has_previous %}
             <li class="page-item ">
@@ -34,13 +33,14 @@
             <li class="page-item disabled"><a class="page-link" href="#">&#8250;</a></li>
             <li class="page-item disabled"><a class="page-link" href="#">&#187;</a></li>
         {% endif %}
-        <li class="page-item">
-            <form method="get" class="input-group mb-3">
-                <input type="number" class="form-control ms-2" placeholder="Page" aria-label="Page"
-                       aria-describedby="follow-page" min="1" max="{{ news.paginator.num_pages }}" name="follow_page">
-                <button class="btn btn-outline-primary" type="submit" id="follow-page">Follow the page</button>
-            </form>
-        </li>
     </ul>
+    <div>Page {{ news.number }} of {{ news.paginator.num_pages }}</div>
+    <div>
+        <form method="get" class="input-group mb-3">
+            <input type="number" class="form-control ms-2" placeholder="Page" aria-label="Page"
+                   aria-describedby="follow-page" min="1" max="{{ news.paginator.num_pages }}" name="page">
+            <button class="btn btn-outline-primary" type="submit" id="follow-page">Follow the page</button>
+        </form>
+    </div>
 
 </nav>
