--- a/src/apps/news/templates/pagination.html
+++ b/src/apps/news/templates/pagination.html
@@ -3,7 +3,7 @@
 <nav aria-label="Page news navigation" class="d-flex justify-content-between">
     <ul class="pagination">
         {% if  news.has_previous %}
-            <li class="page-item ">
+            <li class="page-item">
                 <a class="page-link" href="{% url_replace page=1 %}">&#171;</a>
             </li>
             <li class="page-item">
@@ -39,7 +39,7 @@
         <form method="get" class="input-group mb-3">
             <input type="number" class="form-control ms-2" placeholder="Page" aria-label="Page"
                    aria-describedby="follow-page" min="1" max="{{ news.paginator.num_pages }}" name="page">
-            <button class="btn btn-outline-primary" type="submit" id="follow-page">Follow the page</button>
+            <button class="btn btn-outline-success" type="submit" id="follow-page">Follow the page</button>
         </form>
     </div>
 
