--- a/src/apps/news/templates/news_list.html
+++ b/src/apps/news/templates/news_list.html
@@ -1,12 +1,23 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load crispy_forms_filters %}
 
 {% block styles %}
     <link rel="stylesheet" href="{% static 'news/css/news_list.css' %}">
 {% endblock %}
 
 {% block title %}DedRobin Game Service{% endblock %}
+
+{% block leftsidebar %}
+    <form class="" method="get">
+        {{ filter_form | crispy }}
+        <div class="d-flex justify-content-between">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+            <a class="btn btn-outline-danger" type="reset" href="{% url 'news_list' %}">Reset</a>
+        </div>
+    </form>
+{% endblock %}
 
 {% block content %}
     <div class="container p-2">
