--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,15 +6,19 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-{#    <link rel="stylesheet" href="/static/css/mycss.css">#}
+    {#    <link rel="stylesheet" href="/static/css/mycss.css">#}
     {% block styles %}{% endblock %}
 </head>
 <body>
 
 {% include 'navbar/navbar.html' %}
 
-<div class="container">
-    {% block content %}{% endblock %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">{% block leftsidebar %}{% endblock %}</div>
+        <div class="col-8">{% block content %}{% endblock %}</div>
+        <div class="col">{% block rightsidebar %}{% endblock %}</div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
