--- a/src/apps/news/templates/article.html
+++ b/src/apps/news/templates/article.html
@@ -1,11 +1,11 @@
-<div class="card border-success mt-3">
+<div class="card mt-3">
     <img src="{{ article.image_src }}" class="card-img-top" alt="{{ article.topic }}">
     <a class="card-header text-center article__company_url"
        href="{{ article.company__url }}">{{ article.company__name }}</a>
     <div class="card-body">
         <h5 class="card-title">{{ article.topic }}</h5>
-        <p class="card-text  text-seccess">{{ article.text }}</p>
-        <p class="card-text text-seccess"><small class="text-body-secondary">{{ article.created_at }}</small></p>
+        <p class="card-text">{{ article.text }}</p>
+        <p class="card-text"><small class="text-body-secondary">{{ article.created_at }}</small></p>
         <a href="{{ article.link }}" class="btn btn-success ">Follow the link</a>
     </div>
 </div>
