--- a/src/apps/news/templates/news_list.html
+++ b/src/apps/news/templates/news_list.html
@@ -22,7 +22,7 @@
 {% block content %}
     <div class="container p-2">
         {% include "pagination.html" %}
-        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 pb-2">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-4 pb-2">
             {% for article in news %}
                 {% if article.is_published %}
                     <div class="col">
@@ -33,4 +33,14 @@
         </div>
         {% include "pagination.html" %}
     </div>
+{% endblock %}
+
+{% block rightsidebar %}
+    <form class="" method="get">
+        {{ filter_form | crispy }}
+        <div class="d-flex justify-content-between">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+            <a class="btn btn-outline-danger" type="reset" href="{% url 'news_list' %}">Reset</a>
+        </div>
+    </form>
 {% endblock %}
