--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,11 +12,13 @@
 <body>
 
 {% include 'navbar/navbar.html' %}
+
 <div class="container-fluid">
-    <div class="row">
-        <div class="col">{% block leftsidebar %}{% endblock %}</div>
-        <div class="col-8">{% block content %}{% endblock %}</div>
-        <div class="col">{% block rightsidebar %}{% endblock %}</div>
+    <div class="row row-cols-1 row-cols-lg-3">
+{#    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">"#}
+        <div class="col col-lg-2">{% block leftsidebar %}{% endblock %}</div>
+        <div class="col col-lg-8">{% block content %}{% endblock %}</div>
+        <div class="col col-lg-2">{% block rightsidebar %}{% endblock %}</div>
     </div>
 </div>
 
