fixed news_list.html 2

--- a/src/apps/news/static/news/css/news_list.scss
+++ b/src/apps/news/static/news/css/news_list.scss
@@ -1,7 +1,13 @@
 .article__company_url {
-	text-decoration: none;
-	transition: 0.2s;
-	&:hover {
-		background: #E0E0E0;
-	}
+  text-decoration: none;
+  transition: 0.2s;
+
+  &:hover {
+    background: #E0E0E0;
+  }
+}
+
+a._navbar_menu:hover {
+  transition: 0.2s;
+  background-color: green;
 }
