--- a/src/apps/news/templates/article.html
+++ b/src/apps/news/templates/article.html
@@ -1,5 +1,5 @@
 <div class="card mt-3">
-    <img src="{{ article.image_src }}" class="card-img-top" alt="{{ article.topic }}">
+    <img src="{{ article.image_src }}" class="card-img-top" alt="{{ article.topic }}" style="object-fit: cover; height: 350px">
     <a class="card-header text-center article__company_url"
        href="{{ article.company__url }}">{{ article.company__name }}</a>
     <div class="card-body">
