--- a/src/apps/news/templates/news_list.html
+++ b/src/apps/news/templates/news_list.html
@@ -22,10 +22,10 @@
 {% block content %}
     <div class="container p-2">
         {% include "pagination.html" %}
-        <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-4 pb-2">
+        <div class="row row-cols-1 justify-content-center pb-2">
             {% for article in news %}
                 {% if article.is_published %}
-                    <div class="col">
+                    <div class="col-8">
                         {% include 'article.html' %}
                     </div>
                 {% endif %}
