--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,7 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    {#    <link rel="stylesheet" href="/static/css/mycss.css">#}
+{#        <link rel="stylesheet" href="{% static '' %}">#}
     {% block styles %}{% endblock %}
 </head>
 <body>
@@ -15,7 +17,6 @@
 
 <div class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-3">
-{#    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">"#}
         <div class="col col-lg-2">{% block leftsidebar %}{% endblock %}</div>
         <div class="col col-lg-8">{% block content %}{% endblock %}</div>
         <div class="col col-lg-2">{% block rightsidebar %}{% endblock %}</div>
