--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'news_list' %}">News</a>
+                    <a class="nav-link active _navbar_menu" aria-current="page" href="{% url 'news_list' %}">News</a>
                 </li>
                 {#                <li class="nav-item">#}
                 {#                    <a class="nav-link" href="#">Link</a>#}
