--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -8,11 +8,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="{% url 'news_list' %}">News</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'news_list' %}">News</a>
                 </li>
-                {#                <li class="nav-item">#}
-                {#                    <a class="nav-link" href="#">Link</a>#}
-                {#                </li>#}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'rent' %}">Rent</a>
+                </li>
                 {#                <li class="nav-item dropdown">#}
                 {#                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"#}
                 {#                       aria-expanded="false">#}
