--- a/src/apps/rent/templates/rent.html
+++ b/src/apps/rent/templates/rent.html
@@ -13,18 +13,38 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="row row-cols-1 row-cols-md-2 g-4 py-2">
         <div class="col">
-            <div class="card">
-                <img src="https://source.unsplash.com/random/1000x1000?sig=1" class="card-img-top" alt="no-image"
-                     style="object-fit: cover; height: 350px">
+            <a href="#" class="card">
+                <img src="https://source.unsplash.com/random/1000x500?sig=1" class="card-img-top" alt="no-image">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Consoles</h5>
+                    {#                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to#}
+                    {#                        additional content. This content is a little bit longer.</p>#}
                 </div>
-            </div>
-        </div>?
+            </a>
+        </div>
+        <div class="col">
+            <a href="#" class="card">
+                <img src="https://source.unsplash.com/random/1000x500?sig=2" class="card-img-top" alt="no-image">
+                <div class="card-body">
+                    <h5 class="card-title">Rooms</h5>
+                    {#                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to#}
+                    {#                        additional content. This content is a little bit longer.</p>#}
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="#" class="card">
+                <img src="https://source.unsplash.com/random/1000x500?sig=3" class="card-img-top" alt="no-image">
+                <div class="card-body">
+                    <h5 class="card-title">Clubs</h5>
+                    {#                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to#}
+                    {#                        additional content. This content is a little bit longer.</p>#}
+                </div>
+            </a>
+        </div>
+    </div>
 {% endblock %}
 
 {% block rightsidebar %}
