added page with consoles

--- a/src/apps/rent/templates/rent_list.html
+++ b/src/apps/rent/templates/rent_list.html
@@ -15,7 +15,7 @@
 {% block content %}
     <div class="row row-cols-1 row-cols-md-2 g-4 py-2">
         <div class="col">
-            <a href="#" class="card">
+            <a href="{% url 'console_list' %}" class="card">
                 <img src="{% static 'rent/static/images/rent/console.jpg' %}" class="card-img-top  rent_image_settings"
                      alt="no-image">
                 <div class="card-body">
