--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -11,7 +11,7 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'news_list' %}">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'rent' %}">Rent</a>
+                    <a class="nav-link" href="{% url 'rent_list' %}">Rent</a>
                 </li>
                 {#                <li class="nav-item dropdown">#}
                 {#                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"#}
