--- a/src/apps/rent/templates/rent_list.html
+++ b/src/apps/rent/templates/rent_list.html
@@ -13,9 +13,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row row-cols-1 row-cols-md-2 g-4 py-2">
+    <div class="row row-cols-1 row-cols-md-2 g-4 py-2 text-center">
         <div class="col">
-            <a href="{% url 'console_list' %}" class="card">
+            <a href="{% url 'console_list' %}" class="card" style="text-decoration: none;">
                 <img src="{% static 'rent/static/images/rent/console.jpg' %}" class="card-img-top  rent_image_settings"
                      alt="no-image">
                 <div class="card-body">
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="col">
-            <a href="#" class="card">
+            <a href="#" class="card" style="text-decoration: none;">
                 <img src="{% static 'rent/static/images/rent/room.jpg' %}" class="card-img-top  rent_image_settings"
                      alt="no-image">
                 <div class="card-body">
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="col">
-            <a href="#" class="card">
+            <a href="#" class="card" style="text-decoration: none;">
                 <img src="{% static 'rent/static/images/rent/club.jpg' %}" class="card-img-top rent_image_settings"
                      alt="no-image">
                 <div class="card-body">
