--- a/src/apps/console/templates/console.html
+++ b/src/apps/console/templates/console.html
@@ -9,10 +9,9 @@
     </div>
     <div class="card-body text-center">
         <h5 class="card-title">{{ console.name }}</h5>
-        {#        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's#}
-        {#            content.</p>#}
         <div class="d-grid">
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                    data-bs-target="#{{ console.id }}-modal">
                 Rent
             </button>
         </div>
