--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -1,13 +1,16 @@
 <li class="nav-item dropdown">
-    <button class="btn btn-success dropdown-toggle fs-6 px-5" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-        Menu
-    </button>
-    <ul class="dropdown-menu ">
-        <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
-        <li>
-            <hr class="dropdown-divider">
-        </li>
-        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-    </ul>
+    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+        <a href="#" class="btn btn-secondary">Orders{% if num_orders %}({{ num_orders }}){% endif %}</a>
+        <button class="btn btn-success dropdown-toggle fs-6 px-5" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+            Menu
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+        </ul>
+    </div>
 </li>
