--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -1,6 +1,10 @@
 <li class="nav-item dropdown">
     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-        <a href="#" class="btn btn-secondary">Orders{% if num_orders %}({{ num_orders }}){% endif %}</a>
+        <a href="#" class="btn btn-secondary">Orders
+            {% if request.rented_thing_count %}
+                ({{ request.rented_thing_count }})
+            {% endif %}
+        </a>
         <button class="btn btn-success dropdown-toggle fs-6 px-5" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
             Menu
