--- a/src/apps/rent/templates/rent/console/console_list.html
+++ b/src/apps/rent/templates/rent/console/console_list.html
@@ -16,7 +16,7 @@
     <div class="row row-cols-3">
         {% for console in consoles %}
             <div class="col d-flex justify-content-center pt-3">
-                {% include 'console/console.html' %}
+                {% include 'rent/console/console.html' %}
             </div>
         {% endfor %}
     </div>
