--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,6 +14,7 @@
 <body>
 
 {% include 'navbar/navbar.html' %}
+{% include 'notification.html' %}
 
 <div class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-3">
