--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -1,6 +1,6 @@
 <li class="nav-item dropdown">
     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-        <a href="#" class="btn btn-secondary">Orders
+        <a href="{% url 'rent_order_list' %}" class="btn btn-secondary">Orders
             {% if request.rented_thing_count %}
                 ({{ request.rented_thing_count }})
             {% endif %}
