--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -1,20 +1,29 @@
 <li class="nav-item dropdown">
-    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-        <a href="{% url 'rent_order_list' %}" class="btn btn-secondary">Orders
-            {% if request.rented_thing_count %}
-                ({{ request.rented_thing_count }})
-            {% endif %}
-        </a>
-        <button class="btn btn-success dropdown-toggle fs-6 px-5" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-            Menu
-        </button>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
-            <li>
+    <div class="btn-group" role="group" aria-label="Vertical button group">
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                Orders
+                {% if request.rented_thing_count %}
+                    ({{ request.rented_thing_count }})
+                {% endif %}
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'room_order_list' %}">Room</a></li>
+                <li><a class="dropdown-item" href="{% url 'club_order_list' %}">Club</a></li>
+                <li><a class="dropdown-item" href="{% url 'console_order_list' %}">Console</a></li>
+            </ul>
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                Menu
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
                 <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-        </ul>
+                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+            </ul>
+        </div>
     </div>
 </li>
