added 'is_completed' and 'completed_date' fields for 'Rent' model

--- a/src/apps/rent/templates/rent/orders/rooms/room_order_list.html
+++ b/src/apps/rent/templates/rent/orders/rooms/room_order_list.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Rooms orders</h1>
+    <h1>Room orders</h1>
     <div class="container">
         <div class="row row-cols-1">
             {% for room_order in room_orders %}
