--- a/src/apps/rent/templates/rent/rooms/rent_room_modal.html
+++ b/src/apps/rent/templates/rent/rooms/rent_room_modal.html
@@ -15,7 +15,11 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-success">Send the order</button>
+                    {% if request.user.is_authenticated %}
+                        <button type="submit" class="btn btn-success">Send the order</button>
+                    {% else %}
+                        <button type="submit" class="btn btn-success disabled">Send the order</button>
+                    {% endif %}
                 </div>
             </form>
         </div>
