--- a/src/apps/rent/templates/rent/orders/consoles/console_rent.html
+++ b/src/apps/rent/templates/rent/orders/consoles/console_rent.html
@@ -12,7 +12,12 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">{{ console_order.console.name }}</h5>
+                <div class="d-flex justify-content-between">
+                    <h5 class="card-title">{{ console_order.console.name }}</h5>
+                    {% if console_order.is_completed %}
+                        <h5 class="card-title text-success">Completed</h5>
+                    {% endif %}
+                </div>
                 <p class="card-text">Days: {{ console_order.days }}</p>
                 <p class="card-text">Comment: {{ console_order.comment }}</p>
                 <p class="card-text"><small class="text-body-secondary">Was created
