added 'hours', 'people' fields for 'RoomRent' model

--- a/src/apps/rent/templates/rent/orders/rooms/room_rent.html
+++ b/src/apps/rent/templates/rent/orders/rooms/room_rent.html
@@ -14,6 +14,8 @@
             <div class="card-body">
                 <h5 class="card-title">{{ room_order.room.name }}</h5>
                 <p class="card-text">Comment: {{ room_order.comment }}</p>
+                <p class="card-text">Hours: {{ room_order.hours }}</p>
+                <p class="card-text">People: {{ room_order.people }}</p>
                 <p class="card-text"><small class="text-body-secondary">Was created
                     at {{ room_order.created_at }}</small></p>
             </div>
