--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -23,6 +23,8 @@
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
                 <hr class="dropdown-divider">
+                <li><a class="dropdown-item" href="#">Purchases</a></li>
+                <hr class="dropdown-divider">
                 <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
             </ul>
         </div>
