--- a/src/apps/shop/templates/purchase.html
+++ b/src/apps/shop/templates/purchase.html
@@ -8,6 +8,8 @@
         <div class="card-body">
             <h5 class="card-title">{{ purchase.product.name }}</h5>
             <p class="card-text">{{ purchase.product.description }}</p>
+            <hr>
+            <p class="card-text">Comment: {{ purchase.comment }}</p>
         </div>
         <div class="card-footer text-success">
             Completed
