--- a/src/apps/shop/templates/product_list.html
+++ b/src/apps/shop/templates/product_list.html
@@ -7,13 +7,16 @@
     {#    <link rel="stylesheet" href="{% static 'rent/static/css/rent/rent.css' %}">#}
 {% endblock %}
 
+
 {% block title %}Shop{% endblock %}
 
 {% block leftsidebar %}
 {% endblock %}
 
+{% block breadcrumb %}
+    <li class="breadcrumb-item active" aria-current="page">Shop</li>
+{% endblock %}
 {% block content %}
-    <h1>Shop</h1>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
         {% for product in products %}
             {% include 'product.html' %}
