--- a/src/apps/shop/templates/product_modal.html
+++ b/src/apps/shop/templates/product_modal.html
@@ -1,7 +1,7 @@
 {% load crispy_forms_filters %}
 
 <!-- Modal -->
-<form method="post" action="{% url 'make_purchase' product_id=product.id %}">
+<form method="post" action="{% url 'shop:make_purchase' product_id=product.id %}">
     <div class="modal fade" id="product-{{ product.id }}" tabindex="-1" aria-labelledby="exampleModalLabel"
          aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
