--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,14 @@
 <div class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-3">
         <div class="col col-lg-2">{% block leftsidebar %}{% endblock %}</div>
-        <div class="col col-lg-8">{% block content %}{% endblock %}</div>
+        <div class="col col-lg-8">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb my-2 fs-1">
+                    {% block breadcrumb %}{% endblock %}
+                </ol>
+            </nav>
+            {% block content %}{% endblock %}
+        </div>
         <div class="col col-lg-2">{% block rightsidebar %}{% endblock %}</div>
     </div>
 </div>
