--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -23,7 +23,7 @@
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
                 <hr class="dropdown-divider">
-                <li><a class="dropdown-item" href="{% url 'purchase_list' %}">Purchases</a></li>
+                <li><a class="dropdown-item" href="{% url 'shop:purchase_list' %}">Purchases</a></li>
                 <hr class="dropdown-divider">
                 <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
             </ul>
