fixed css render

--- a/src/apps/news/static/news/css/news_list.css
+++ b/src/apps/news/static/news/css/news_list.css
@@ -1,7 +1,7 @@
 .article__company_url {
   text-decoration: none;
-  transition: 0.2s; }
+  transition: 0.15s; }
   .article__company_url:hover {
-    background: #E0E0E0; }
+    background: #6c757d; }
 
 /*# sourceMappingURL=news_list.css.map */
