--- a/src/apps/news/static/news/css/news_list.scss
+++ b/src/apps/news/static/news/css/news_list.scss
@@ -1,9 +1,9 @@
 .article__company_url {
   text-decoration: none;
-  transition: 0.2s;
+  transition: 0.15s;
 
   &:hover {
-    background: #E0E0E0;
+    background: #6c757d;
   }
 }
 
