--- a/src/apps/news/templates/news_list.html
+++ b/src/apps/news/templates/news_list.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_filters %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'news/css/news_list.css' %}">
+    <link rel="stylesheet" href="{% static 'news/static/news/css/news_list.css' %}">
 {% endblock %}
 
 {% block title %}DedRobin Game Service{% endblock %}
