--- a/src/apps/rent/templates/rent/orders/consoles/console_rent.html
+++ b/src/apps/rent/templates/rent/orders/consoles/console_rent.html
@@ -7,7 +7,7 @@
                 <img src="{{ console_order.console.image.url }}" class="img-fluid rounded-start"
                      alt="{{ console_order.console.name }}">
             {% else %}
-                <img src="{% static 'images/no-image.png' %}" class="img-fluid rounded-start" alt="No image">
+                <img src="{% static 'static/images/no-image.png' %}" class="img-fluid rounded-start" alt="No image">
             {% endif %}
         </div>
         <div class="col-md-8">
