--- a/src/apps/rent/templates/rent/clubs/club_list.html
+++ b/src/apps/rent/templates/rent/clubs/club_list.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_filters %}
 
 {% block styles %}
-    {#    <link rel="stylesheet" href="{% static 'rent/static/css/rent/rent.css' %}">#}
+    <link rel="stylesheet" href="{% static 'rent/static/rent/css/rent.css' %}">
 {% endblock %}
 
 {% block title %}Rent Clubs{% endblock %}
@@ -19,7 +19,7 @@
             {{ errors }}
         </div>
     {% endif %}
-    <div class="row row-cols-3">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
         {% for club in clubs %}
             <div class="col d-flex justify-content-center pt-3">
                 {% include 'rent/clubs/club.html' %}
