--- a/src/apps/rent/templates/rent/console/console.html
+++ b/src/apps/rent/templates/rent/console/console.html
@@ -1,11 +1,11 @@
 {% load static %}
 
-<div class="card justify-content-between" style="width: 20rem; align-content: space-between; flex-flow: row wrap;">
+<div class="card justify-content-between">
     <div>
         {% if console.image %}
             <img src="{{ console.image.url }}" class="card-img-top" alt="{{ console.name }}">
         {% else %}
-            <img src="{% static 'images/no-image.png' %}" class="card-img-top" alt="{{ console.name }}">
+            <img src="{% static 'static/images/no-image.png' %}" class="card-img-top" alt="{{ console.name }}">
         {% endif %}
     </div>
     <div class="card-body text-center">
