--- a/src/apps/rent/templates/rent/orders/rooms/room_rent.html
+++ b/src/apps/rent/templates/rent/orders/rooms/room_rent.html
@@ -7,7 +7,7 @@
                 <img src="{{ room_order.room.image.url }}" class="img-fluid rounded-start"
                      alt="{{ room_order.room.name }}">
             {% else %}
-                <img src="{% static 'images/no-image.png' %}" class="img-fluid rounded-start" alt="No image">
+                <img src="{% static 'static/images/no-image.png' %}" class="img-fluid rounded-start" alt="No image">
             {% endif %}
         </div>
         <div class="col-md-8">
